[metadata]
name = lpcjobqueue
maintainer = Nick Smith
maintainer_email = nick.smith@cern.ch
description = A dask-jobqueue plugin for the LPC Condor queue 
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
platforms =
  Any
classifiers =
  Topic :: Scientific/Engineering
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  Operating System :: OS Independent
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Development Status :: 1 - Planning

[options]
include_package_data = True
python_requires = >=3.6
packages = find:
package_dir =
  =src
install_requires =
  dask
  distributed
  dask-jobqueue
  htcondor

[options.packages.find]
where = src

[options.extras_require]
test =
  pytest >=4.6
dev =
  pytest >=4.6
  black
  flake8

[tool:pytest]
addopts = -rs -s -Wd
testpaths =
    tests

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T
